fix: use fixed font-size for form labels instead of responsive paragraph placeholder
%paragraph-font-300 scales from 1.6rem to 1.8rem at the medium
breakpoint, which is too large for form labels. Use a flat
$mg-font-size-300 (1.6rem) on .mg-form-label and
.mg-form-error-summary__title.

--- a/stories/Components/Forms/_form-base.scss
+++ b/stories/Components/Forms/_form-base.scss
@@ -13,9 +13,8 @@
 // Label
 // -----------------------------------------------------------------------------
 .mg-form-label {
-  @extend %paragraph-font-300;
-
   display: block;
+  font-size: $mg-font-size-300;
 
   &--disabled {
     color: $mg-color-neutral-400;
@@ -249,9 +248,8 @@
   }
 
   &__title {
-    @extend %paragraph-font-300;
-
     color: $mg-color-red-900;
+    font-size: $mg-font-size-300;
     font-weight: 700;
     margin-bottom: $mg-spacing-75;
     margin-top: 0;
